# metgen

./: .gitattributes  Cargo.toml  README.md  airports.csv  build.rs  metgen.rc
.github/workflows/: release.yml
src/: config.rs  gui.rs  input_handler.rs  main.rs  metar_generator.rs  one_call_metar.rs  ui.rs
