[package]
name = "metgen"
version = "0.7.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["FiendishDrWu"]
description = "A METAR generator for flight simulators using real-world weather data"
repository = "https://github.com/FiendishDrWu/metgen"
readme = "README.md"
keywords = ["metar", "msfs", "flightsim", "aviation", "xplane"]
categories = ["command-line-utilities", "simulation"]

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
regex = "1.11.1"
csv = "1.3.1"
dialoguer = "0.11.0"
base64 = "0.22.1"
crossterm = "0.28.1"
term_size = "0.3.2"
chrono = "0.4.39"

[profile.release]
opt-level = "z"
strip = true
panic = "abort"

[build-dependencies]
winres = "0.1"
