[package]
name = "metgen"
version = "0.9.2"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["FiendishDrWu"]
description = "A METAR generator for flight simulators using real-world weather data"
repository = "https://github.com/FiendishDrWu/metgen"
readme = "README.md"
keywords = ["metar", "msfs", "flightsim", "aviation", "xplane"]
categories = ["gui", "simulation"]

[target.'cfg(windows)'.dependencies]
windows = "0.54.0"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
regex = "1.11.1"
csv = "1.3.1"
base64 = "0.22.1"
chrono = "0.4.39"
eframe = "0.26.2"
rfd = "0.14.0"
image = "0.24.9"

[profile.release]
opt-level = "z"
strip = true
panic = "abort"

[build-dependencies]
winres = "0.1"

[package.metadata.windows]
subsystem = "windows"
